fixed_menu_overflow

--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -122,6 +122,7 @@ h3 {
   transition-duration: 1s;
   transition-delay: 0.1s;
   max-height: 500px;
+  overflow: hidden;
 }
 
 .menu__list--hidden {
